# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: __init__.py  brain_games.py
